--- a/action.yml
+++ b/action.yml
@@ -55,4 +55,4 @@ outputs:
 runs:
   using: "docker"
   image: "docker://mishapos/static-web-apps-deploy:latest"
-  entrypoint: 'sh -c "cat /bin/staticsites/swa_metadata.txt"'
+  entrypoint: 'sh -c cat /bin/staticsites/swa_metadata.txt'
