--- a/action.yml
+++ b/action.yml
@@ -54,5 +54,6 @@ outputs:
     description: "Url of the application"
 runs:
   using: "docker"
-  image: "docker://mishapos/static-web-apps-deploy:latest"
-  entrypoint: "/entrypoint.sh"
+  #"docker://mishapos/static-web-apps-deploy:latest"
+  image: 'Dockerfile'
+  #entrypoint: "/entrypoint.sh"
