--- a/action.yml
+++ b/action.yml
@@ -56,4 +56,4 @@ runs:
   using: "docker"
   image: "docker://mishapos/static-web-apps-deploy:latest"
   #image: 'Dockerfile'
-  #entrypoint: "/entrypoint.sh"
+  entrypoint: "/entrypoint.sh"
