--- a/action.yml
+++ b/action.yml
@@ -55,4 +55,4 @@ outputs:
 runs:
   using: "docker"
   image: "Dockerfile"
-  pre-entrypoint: 'pre-entrypoint.sh'
+  pre-entrypoint: '/pre-entrypoint.sh'
