--- a/action.yml
+++ b/action.yml
@@ -57,6 +57,5 @@ outputs:
     description: "Url of the application"
 runs:
   using: "docker"
-  image: "docker://mishapos/static-web-apps-deploy:june2022"
-  #image: 'Dockerfile'
+  image: 'Dockerfile'
   entrypoint: "/entrypoint.sh"
